@@ -9,6 +9,7 @@
 - Fix for script generated for code first contains wrong alter table and wrong declaration for byte[] (MySql bug #64216, Oracle bug #13900091).
 - Fix for Exception thrown when using cascade delete in an EDM Model-First in Entity Framework (Oracle bug #14008752, MySql bug #64779).
 - Fix for Session locking issue with MySqlSessionStateStore (MySql bug #63997, Oracble bug #13733054).
+- Fixed deleting a user profile using Profile provider (MySQL bug #64409, Oracle bug #13790123)
 
 6.4.5
 - Fix for bug on Create Table via Server Explorer. The columns properties are now added in the correct order.(Oracle db Bug # 13475830).
